<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
    <RelativeLayout
        android:visibility="visible"
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>
    <RelativeLayout
        android:visibility="gone"
        android:gravity="center_horizontal|center_vertical"
        android:id="@+id/NoConectoServidor"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:id="@+id/imgNoConecto"
            android:src="@drawable/carrito_triste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/md_black_1000"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:textAlignment="center"
            android:text="@string/noConexion"
            android:layout_below="@+id/imgNoConecto"
            android:id="@+id/msgNoConecto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/msgNoConecto"
            android:id="@+id/btnReintentarBuscar"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:background="@drawable/my_button_bg"
            android:text="@string/Reintentar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <Button
        android:background="@drawable/my_button_bg"
        android:layout_marginTop="20dp"
        android:id="@+id/AgregarLista"
        android:text="@string/AgregarLista"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <android.support.v7.widget.RecyclerView
        android:layout_margin="20dp"
        android:id="@+id/recyclerListas"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>