<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

        <LinearLayout
            android:visibility="gone"
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/msgErrorUbicacion"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imgErrorVerProductoPorId"
                android:src="@drawable/gps_orange_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/textMensajeErrorBuscar"
                android:textColor="@color/view_bg"
                android:padding="40dp"
                android:textAlignment="center"
                android:text="@string/sinUbicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnReintentarBuscar"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:background="@drawable/my_button_bg"
                android:text="@string/Reintentar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    <RelativeLayout
        android:visibility="visible"
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>
    <android.support.v7.widget.CardView
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:weightSum="10"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <ImageButton
                    android:src="@drawable/mp"
                    android:background="@android:color/transparent"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:id="@+id/estrellaCabecera"
                    android:layout_marginBottom="5dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="4.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="10dp"
                    android:textColor="@color/md_black_1000"
                    android:id="@+id/MejorNombre"
                    android:fontFamily="@font/quicksand_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textColor="@color/md_black_1000"
                    android:text="@string/MejorPrecioTitle"
                    android:fontFamily="@font/quicksand_regular"
                    android:id="@+id/titlePrecio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textColor="@color/md_black_1000"
                    android:fontFamily="@font/quicksand_bold"
                    android:id="@+id/MejorPrecio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_gravity="left"
                android:layout_weight="2.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/image_placeholder"
                    android:minWidth="120dp"
                    android:id="@+id/MejorImgProducto"
                    android:layout_width="100dp"
                    android:layout_height="100dp"/>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:clickable="true"
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>